@@ -1091,3 +1091,7 @@ COMPLEX, IMREAL, IMAGINARY, IMSUB, IMSUM
 2000-11-28-Montel laurent <lmontel@mandrakesoft.com>
 ----------------------------------------------------
 Add new math functions IMDIV, SUMPRODUCT  , SUMX2PY2 ,    SUMX2MY2    ,  SUM2XMY
+
+2000-12-02-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+Add new functions IMCOS, IMSIN, IMPOWER, IMSQRT, IMEXP, IMLN
